--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="description" content="Trending printed t-shirts, hoodies & long sleeve apparel. Premium fabric, bold prints. Order via WhatsApp.">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+<script src="https://unpkg.com/lucide@latest"></script>
 <style>
 :root {
   --primary: #ff9800;
@@ -30,8 +30,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
 }
+
 
 body {
   background: var(--dark);
@@ -59,6 +60,16 @@ header {
   z-index: 1000;
   transition: all 0.3s ease;
 }
+.brand-logo {
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+}
+
+.brand-logo svg {
+  color: var(--primary);
+}
+
 
 .logo {
   font-size: clamp(1.4rem, 4vw, 1.8rem);
@@ -731,6 +742,140 @@ section {
 .product-card, .step-card {
   animation: fadeInUp 0.6s ease forwards;
 }
+/* ===============================
+   RESPONSIVE FIXES (TABLET + MOBILE)
+   =============================== */
+
+/* TABLET (max-width: 1024px) */
+@media (max-width: 1024px) {
+
+  header {
+    padding: 0 1.5rem;
+  }
+
+  nav {
+    gap: 0.5rem;
+  }
+
+  nav a {
+    font-size: 0.85rem;
+    padding: 0.4rem 0.6rem;
+  }
+
+  .hero-content h1 {
+    font-size: clamp(2.2rem, 7vw, 3.5rem);
+  }
+
+  .hero-content p {
+    font-size: 1.1rem;
+  }
+
+  section {
+    padding: 3rem 1.5rem;
+  }
+
+  .products-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .steps-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* MOBILE (max-width: 768px) */
+@media (max-width: 768px) {
+
+  /* HEADER STACK */
+  header {
+    flex-direction: column;
+    height: auto;
+    padding: 0.8rem 1rem;
+    gap: 0.6rem;
+  }
+
+  nav {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  /* HERO */
+  .hero {
+    padding-top: 120px;
+  }
+
+  .hero-content h1 {
+    font-size: 2.2rem;
+  }
+
+  .hero-content p {
+    font-size: 1rem;
+  }
+
+  .cta-btn {
+    padding: 1rem 2rem;
+    font-size: 1rem;
+  }
+
+  /* BEST SELLERS */
+  .best-sellers {
+    padding: 1.5rem;
+  }
+
+  .best-sellers-grid {
+    grid-template-columns: 1fr;
+  }
+
+  /* PRODUCTS */
+  .products-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .product-image {
+    height: 220px;
+  }
+
+  /* STEPS */
+  .steps-grid {
+    grid-template-columns: 1fr;
+  }
+
+  /* ORDER FORM */
+  .order-container {
+    padding: 1.5rem;
+  }
+
+  /* FOOTER */
+  .footer-content {
+    text-align: center;
+  }
+}
+
+/* SMALL MOBILE (max-width: 480px) */
+@media (max-width: 480px) {
+
+  .hero-content h1 {
+    font-size: 2rem;
+  }
+
+  .hero-badge {
+    font-size: 0.75rem;
+    padding: 0.4rem 1rem;
+  }
+
+  .product-info h3 {
+    font-size: 1.1rem;
+  }
+
+  .product-price {
+    font-size: 1.6rem;
+  }
+
+  .faq-section {
+    padding: 1.5rem;
+  }
+}
+
 </style>
 </head>
 
@@ -738,7 +883,14 @@ section {
 
 <!-- HEADER -->
 <header>
-  <div class="logo">Fusion Crest</div>
+  <div class="logo brand-logo">
+  <svg width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <path d="M12 2l4 8H8l4-8z"/>
+    <path d="M2 22h20"/>
+  </svg>
+  <span>Fusion Crest</span>
+</div>
+
   <nav>
     <a href="#products">Products</a>
     <a href="#bestsellers">Best Sellers</a>
@@ -928,18 +1080,39 @@ section {
     <div class="footer-brand">
       <h3>Fusion Crest</h3>
       <p>Premium printed apparel with bold designs</p>
-      <div class="social-links">
-        <a href="#" class="social-link" title="WhatsApp">📱</a>
-        <a href="#" class="social-link" title="Instagram">📸</a>
-        <a href="#" class="social-link" title="Facebook">📘</a>
-      </div>
+     <div class="social-links">
+  <a href="https://wa.me/919356990219" class="social-link" target="_blank">
+    <i data-lucide="message-circle"></i>
+  </a>
+  <a href="#" class="social-link" target="_blank">
+    <i data-lucide="instagram"></i>
+  </a>
+  <a href="#" class="social-link" target="_blank">
+    <i data-lucide="facebook"></i>
+  </a>
+</div>
+
+
     </div>
-    <div class="footer-contact">
-      <h4>Let's Connect</h4>
-      <p><span class="contact-highlight">+91 9356990219</span></p>
-      <p>📍 India Wide Delivery</p>
-      <p>⚡ Same Day Dispatch</p>
-    </div>
+  <div class="footer-contact">
+  <h4>Store Address</h4>
+
+  <p>
+    <i data-lucide="store"></i>
+    Fusion Crest Revrie Prints
+  </p>
+
+  <p>
+    <i data-lucide="map-pin"></i>
+    5th Mail, Tasgaon Road, Near Parvati Hardware
+  </p>
+
+  <p>
+    <i data-lucide="phone"></i>
+    +91 9356990219
+  </p>
+</div>
+
   </div>
   <div class="footer-bottom">
     © 2026 Fusion Crest – Revrie Prints. All rights reserved.
@@ -988,6 +1161,9 @@ document.querySelectorAll('.faq-question').forEach(question => {
     }
   });
 });
+</script>
+<script>
+  lucide.createIcons();
 </script>
 
 </body>
